--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ img {
 
 }
 
-.topnav a {
+.topnav-right a {
     height: fit-content;
     font-family: sans-serif;
     font-weight: 700;
@@ -44,7 +44,7 @@ img {
     font-size: 17px;
 }
 
-.topnav a:hover{
+.topnav-right a:hover, a:active{
     background-color: #03506f;
     color: #bbbbbb;
 }
