--- a/style.css
+++ b/style.css
@@ -30,11 +30,9 @@ img {
     display: flex;
     flex-wrap: wrap;
     padding: auto;
-
 }
 
 .topnav-right a {
-    height: fit-content;
     font-family: sans-serif;
     font-weight: 700;
     color: #ffe3d8;
@@ -44,13 +42,13 @@ img {
     font-size: 17px;
 }
 
-.topnav-right a:hover{
+.topnav-right a:hover, a.active{
     background-color: #03506f;
     color: #bbbbbb;
 }
 
-.topnav-right a:visited{
-    background-color: #03506f;
-}
+
+
+
 
 
