--- a/style.css
+++ b/style.css
@@ -17,16 +17,23 @@ body {
 }
 
 .logo {
-    padding: 20px 10px;
-    margin-right: 35%;
+    padding: 10px 10px;
+    margin-right: 25%;
 }
 
-img {
-    border-radius: 100%;
+h1{
+    color: blanchedalmond;
+    width: 105px;
+}
+
+@media only screen and (max-width: 320px){
+    .logo {
+        padding: 10px 10px;
+        margin-right: 15%;
+    }
 }
 
 .topnav-right { 
-    width: fit-content;
     display: flex;
     flex-wrap: wrap;
     padding: auto;
