--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
 }
@@ -8,7 +12,8 @@ body {
 }
 
 
-.topnav {
+nav {
+    top: 0;
     width: 100%;
     background-color: #0a043c;
     overflow: hidden;
@@ -24,6 +29,7 @@ body {
 h1{
     color: blanchedalmond;
     width: 105px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 @media only screen and (max-width: 320px){
@@ -60,6 +66,36 @@ h1{
     cursor: pointer;
 }
 
+
+#about_me #gif{
+    float: left;
+    width: 100%;
+    height: 30rem;
+    z-index: -99;
+    top: 0;
+    background-image: url("./image/coding.gif");   
+    background-size: cover;
+    padding: 0;
+    margin: 0;
+}
+
+@media only screen and (max-width:600px){
+    #about_me #gif {
+        height: 20rem;
+    }
+    
+    .logo{
+        margin-right: 0%;
+    }
+
+    .topnav-right a{
+        padding: 20px;
+    }
+
+    .topnav-right a:hover, a:active{
+        padding: 20px 10px;
+    }
+}
 
 
 
