--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
 
 .header {
     top: 0;
-    background-color: #0a043c;
 }
 
 
@@ -19,10 +18,11 @@ nav {
     overflow: hidden;
     position: fixed;
     display: flex;
+    opacity: 95%;
 }
 
 .logo {
-    padding: 10px 10px;
+    padding: 10px 60px;
     margin-right: 25%;
 }
 
@@ -30,6 +30,9 @@ h1{
     color: blanchedalmond;
     width: 105px;
     font-family: 'Times New Roman', Times, serif;
+    text-shadow: -2px 2px 2.5px blanchedalmond;
+    font-style: italic;
+    font-size: 1.8rem;
 }
 
 @media only screen and (max-width: 320px){
@@ -81,7 +84,7 @@ h1{
 
 @media only screen and (max-width:600px){
     #about_me #gif {
-        height: 20rem;
+        height: 25rem;
     }
     
     .logo{
