--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav {
     margin-right: 25%;
 }
 
-h1{
+.logo h1{
     color: blanchedalmond;
     width: 105px;
     font-family: 'Times New Roman', Times, serif;
@@ -73,11 +73,14 @@ h1{
 #about_me #gif{
     float: left;
     width: 100%;
-    height: 30rem;
-    z-index: -99;
+    z-index: -1;
     top: 0;
-    background-image: url("./image/coding.gif");   
+    background-image: url("./image/coding.gif");  
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat; 
     background-size: cover;
+    min-height: 30rem;
     padding: 0;
     margin: 0;
 }
@@ -100,7 +103,20 @@ h1{
     }
 }
 
+#info{
+    height: 1000px;
+    text-align: center;
+}
 
+#info h1{
+    font-style: italic;
+}
 
-
+#info img{
+    float: left;
+    margin: 0 5%;
+    border-radius: 100%;
+    height: 10em;
+    width: 8em;
+}
 
