--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ nav {
     .gif2, .gif3 {
         min-height: 15rem;
         width: 26rem;
+        background-size: contain;
     }
 
     #education {
