--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ nav {
 
 #skills #info #coding_languages #group {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-content: center;
     width: 100%;
     background-color: #eeeeee;
@@ -207,7 +207,6 @@ nav {
 
 #skills #info #coding_languages #group img {
     width: 15%;
-    margin: 0 10rem;
 }
 
 #skills #info #coding_languages #group img:hover {
