--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ nav {
 
 .title h3 {
     color: white;
-    margin: 2rem;
+    margin: 4rem;
 }
 
 .title {
@@ -230,8 +230,51 @@ nav {
     margin-right: 8%;
 }
 
+.container {
+    position: relative;
+    width: 50%;
+}
 
+.cover {
+    opacity: 1;
+    display: block;
+    width: 50%;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    transform: translate(50%, 0%);
+    -ms-transform: translate(50%, 0%);
+}
 
+.hidden {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.container:hover .cover{
+    opacity: 0.3;
+}
+
+.container:hover .hidden{
+    opacity: 1;
+}
+
+.redirect {
+    background-color: #ff2e63;
+    color: #252a34;
+    font-size: 20px;
+    font-weight: 900;
+    padding: 16px 32px;
+  }
+
+a{
+    text-decoration: none;
+}
 @media only screen and (max-width:600px){
     #about_me #gif {
         height: 25rem;
@@ -398,3 +441,5 @@ nav {
         margin-top: 6rem;
     }
 }
+
+
