--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ nav {
     position: fixed;
     display: flex;
     opacity: 95%;
+    z-index: 2;
 }
 
 .logo {
@@ -239,20 +240,23 @@ nav {
     opacity: 1;
     display: block;
     width: 50%;
+    top: 0;
     transition: .5s ease;
     backface-visibility: hidden;
-    transform: translate(50%, 0%);
+    transform: translate(20rem, 0%);
     -ms-transform: translate(50%, 0%);
 }
 
 .hidden {
+    width: 25%;
+    height: 180px;
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
+    top: 0rem;
+    left: 20rem;
+    transform: translate(50%, 50%);
+    -ms-transform: translate(40px, 40px);
     text-align: center;
 }
 
@@ -267,14 +271,15 @@ nav {
 .redirect {
     background-color: #ff2e63;
     color: #252a34;
-    font-size: 20px;
-    font-weight: 900;
-    padding: 16px 32px;
+    font-size: 100%;
+    font-weight: 800;
+    padding: 40% 32px;
   }
 
 a{
     text-decoration: none;
 }
+
 @media only screen and (max-width:600px){
     #about_me #gif {
         height: 25rem;
