--- a/style.css
+++ b/style.css
@@ -234,14 +234,13 @@ nav {
 .container {
     position: relative;
     width: 30%;
-    margin-left: 15%;
+    margin-left: 35%;
 }
 
 .cover {
     opacity: 1;
     display: block;
     width: 100%;
-    /* height: auto; */
     transition: .5s ease;
     backface-visibility: hidden;
 }
@@ -253,8 +252,6 @@ nav {
     top: 40%;
     left: 20%;
     width: 60%;
-    /* transform: translate(0%, 0%);
-    -ms-transform: translate(0%, 0%); */
     text-align: center;
 }
 
@@ -264,6 +261,10 @@ nav {
 
 .container:hover .hidden{
     opacity: 1;
+}
+
+.right {
+    margin-left: 75%;
 }
 
 .redirect {
@@ -338,6 +339,7 @@ a{
 
     #skills #info #coding_languages .group img {
         width: 30%;
+        height: 30%;
     }
 
     #skills #info #coding_languages .group img:hover {
