--- a/style.css
+++ b/style.css
@@ -179,12 +179,12 @@ nav {
 }
 
 #skills {
-    height: 120rem;
+    /* height: 80rem; */
 }
 
 #skills #info{
     background-color: #212121;
-    height: 150rem;
+    height: 120rem;
 }
 
 #skills #info h2 {
@@ -368,6 +368,10 @@ a{
     .title {
         margin-bottom: 2rem;
     }
+
+    #skills #info {
+        height: 65rem;
+    }
 }
 
 @media only screen and (min-width: 300px) and (max-width: 530px){
@@ -397,6 +401,10 @@ a{
     #education #info ul li {
         margin-bottom: 0rem;
     }
+
+    #skills #info {
+        height: 90rem;
+    }    
 
     .redirect {
         font-size: 90%;
@@ -442,7 +450,7 @@ a{
     }
 
     #skills #info {
-        height: 200rem;
+        height: 180rem;
     }
 
     #skills #info h1{
