--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ nav {
 
 #info h1{
     font-family: Calibri;
-    color: #0d7377;
+    color: #ffe3d8;
     font-weight: bolder;
     font-size: 4rem;
     margin: 0;
@@ -263,10 +263,6 @@ nav {
     opacity: 1;
 }
 
-.right {
-    margin-left: 75%;
-}
-
 .redirect {
     background-color: #ff2e63;
     color: #252a34;
@@ -285,6 +281,39 @@ a{
 }
 
 #experiences #info h2 {
+    color: white;
+}
+
+#experiences #info {
+    height: 70rem;
+}
+
+.transition {
+    width: 50%;
+    margin-left: 25%;
+}
+
+.transition img {
+    width: 100%;
+    margin-bottom: 0;
+}
+
+.transition .down {
+    display: none;
+}
+
+.transition:hover .down{
+    display: block;
+    padding: 2%;
+    font-size: large;
+    background-color: #b80431;
+}
+
+.down:hover .tab{
+    text-decoration: underline;
+}
+
+.transition:hover .down a {
     color: white;
 }
 
@@ -381,6 +410,12 @@ a{
     #skills #info {
         height: 65rem;
     }
+
+    .transition {
+        width: 80%;
+        margin-left: 10%;
+    }
+    
 }
 
 @media only screen and (min-width: 300px) and (max-width: 530px){
@@ -482,6 +517,23 @@ a{
     .redirect {
         font-size: 200%;
         padding: 32px 64px;
+    }
+
+    #experiences #info {
+        height: 90rem;
+    }
+
+    #experiences #info h2 {
+        font-size: 4rem;
+    }
+
+    .transition {
+        width: 60%;
+        margin-left: 20%;
+    }    
+
+    .transition:hover .down{
+        font-size: larger;
     }
 }
 
