--- a/style.css
+++ b/style.css
@@ -336,17 +336,20 @@ footer {
 }
 
 footer h2 {
-    margin-top:0;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 2rem;
     text-align: center;
     color: #eeeeee;
 }
 
 footer h1 {
+    margin-top: 0;
     text-align: center;
 }
 
-i.fab.fa-facebood {
-    font-size: 60px;
+i.fab.fa-facebook {
+    font-size: 50px;
 }
 
 @media only screen and (max-width:600px){
