--- a/style.css
+++ b/style.css
@@ -331,26 +331,35 @@ a{
 }
 
 footer {
-    height: 6rem;
+    height: 8rem;
     background-color: #00adb5;
 }
 
 footer h2 {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     font-size: 2rem;
     text-align: center;
     color: #eeeeee;
 }
 
-footer h1 {
-    margin-top: 0;
+footer #icon {
     text-align: center;
 }
 
-i.fab{
-    font-size: 50px;
+footer #icon h1 {
+    margin: 0 10px;
+    display: inline;
 }
+
+i.fab{
+    font-size: 40px;
+}
+
+i.fab:hover {
+    transform: scale(1.25);
+}
+
 
 @media only screen and (max-width:600px){
     #about_me #gif {
@@ -597,6 +606,22 @@ i.fab{
 
     .transition .down #text{
         font-size: 2rem;
+    }
+
+    footer {
+        height: 16rem;
+    }
+    
+    footer h2 {
+        font-size: 4rem;
+    }
+    
+    footer #icon h1 {
+        margin: 0 20px;
+    }
+    
+    i.fab{
+        font-size: 80px;
     }
 }
 
