--- a/style.css
+++ b/style.css
@@ -405,8 +405,8 @@ i.fab:hover {
         min-height: 15rem;
     }
 
-    #education {
-        height: 55rem;
+    #education, #education #info {
+        height: 47.5rem;
     }
 
     #education #info ul {
@@ -422,6 +422,10 @@ i.fab:hover {
        float: none;
        margin-top: 1rem;
     }
+
+    #skills #info {
+        height: 62.5rem;
+    }    
 
     #skills #info #coding_languages .group img {
         width: 30%;
@@ -459,7 +463,7 @@ i.fab:hover {
     }
     
     #experiences #info {
-        height: 40rem;
+        height: 37.5rem;
     }    
 
     .transition {
@@ -472,17 +476,17 @@ i.fab:hover {
     }
 }
 
-@media only screen and (min-width: 300px) and (max-width: 530px) {
-    #education {
-        height: 50rem;
+@media only screen and (min-width: 390px) and (max-width: 600px) {
+    #education, #education #info {
+        height: 48rem;
     }
 
     #skills #info {
-        height: 65rem;
+        height: 70rem;
     }    
 }
 
-@media only screen and (min-width: 601px) and (max-width: 1025px) {
+@media only screen and (min-width: 601px) and (max-width: 920px) {
     .logo {
         margin-right: 15%;
     }
@@ -526,9 +530,9 @@ i.fab:hover {
     }
 }
 
-@media only screen and (min-width: 920px) and (max-width: 1400px) {
+@media only screen and (min-width: 1020px) and (max-width: 1260px) {
     #skills #info {
-        height: 100rem;
+        height: 101rem;
     }
 }
 
