--- a/style.css
+++ b/style.css
@@ -355,8 +355,8 @@ footer #icon h1 {
     display: inline;
 }
 
-i.fab {
-    font-size: 40px;
+footer #icon h1 a img {
+    width: 50px;
     text-decoration: none;
 }
 
